--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
         "php" : ">=5.6.0"
     },
     "require-dev": {
-        "phpunit/phpunit" : "5.*",
-        "scrutinizer/ocular": "~1.1"
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "autoload": {
         "psr-4": {
@@ -35,11 +34,5 @@
         "branch-alias": {
             "dev-master": "1.0-dev"
         }
-    },
-    "bin": [
-        "bin/cowsayphp"
-    ],
-    "config":{
-        "bin-dir": "bin"
     }
 }
